Clarify some of the bootstrap class loader code